# 3dViewer_academic_project

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
materials/: links.md
src/: Makefile  affine_transformations.c  affine_transformations.h  main.c  main_test.c  parser.c  parser.h  parser_2.0.c  s21_matrix.c  s21_matrix.h  support_func.c  telegram_bot.sh  test.cpp
src/3DViewer_v1/: 3DViewer_v1.pro  glviewer.cpp  glviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectcolorbutton.h
src/3Dviewer/: 3Dviewer.pro  glviewer.cpp  glviewer.h  glviewer.ui  main.cpp
src/backend/: main_test.c  parser.c  parser.h  parser_2.0.c  support_func.c
src/build-3DViewer_v1-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_glviewer.cpp  moc_mainwindow.cpp  moc_selectcolorbutton.cpp  ui_glviewer.h  ui_mainwindow.h
src/build-3DViewer_v1-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-3Dviewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_glviewer.cpp  ui_glviewer.h
src/build-3Dviewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/controller/: controller.cc  controller.h
src/legacy/3DViewer_v1/: mainwindow.cpp
src/model/: facade.cc  facade.h
src/model/dao/: data_model.cc  data_model.h
src/tests/: test.txt  tests.cc
src/view/: 3DViewer_v1.pro  3DViewer_v2.pro  glviewer.cpp  glviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  media.cpp  media.h  save_settings.cpp  save_settings.h  test_view.cc  test_view.h  type_transform.h
(+322 files in other folders)
